# dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmodules  .gvimrc  .ideavimrc  .ignore  .tmux.conf  .vimrc  .zshrc  Brewfile  Brewfile.lock.json  CLAUDE.md  Dockerfile  MCP.md  Makefile  README.md  brew-4.0.mk  brew.mk  ci.mk  config.mk  darwin.mk  debian.mk  dependency.mk  docker.mk  dotcommands.mk  dotfiles.mk  go.mk  go.mod  go.sum  linux.mk  macos.mk  main.go  npm.mk  nvim.mk  os.sh  package-lock.json  package.json  pacman.mk  (+9 more)
.claude/: CLAUDE.md  mcp.json  mcp.json.template  settings.json
.claude/agents/: chromium.md  claude-code-sub-agents.md  kent-beck-tidy-first.md  makefile.md  tdd-cycle-executor.md
.claude/commands/: README.md  automation-ready.md  confirm.md  git-commit-impl.md  git-commit.md  interactive.md  rerun.md
.config/: .gitignore
.config/claude/: mcp.json
.config/fish/: config.fish  fish_variables
.config/foot/: foot.ini
.config/ghostty/: Makefile  README.md  config
.config/git/: config  ignore
.github/: dependabot.yml
.hammerspoon/: init.lua
.make/: util.mk
.vim/: Makefile
codex-marketplace/: README.md
dependencies/: arch-add  arch-audit  arch-check  arch-install  arch-lock  arch-remove  arch-sync  arch.toml
document/: MCP.md  README.md  snippets.md
make/: ubuntu.mk  windows.mk
makefiles/: brew.mk  dotfiles.mk  mac.mk  ubuntu.mk
patches/: tmux-resurrect-literal-session-targets.patch
script/: os-check.sh
test/: Dockerfile  Makefile  tmux-resurrect-literal-session-targets
workbench/: Makefile  README.md
(+186 files in other folders)
