[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles with MCP server dependencies"
requires-python = ">=3.8"
dependencies = [
    "markitdown-mcp>=0.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []