[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles with MCP server dependencies"
requires-python = ">=3.12"
dependencies = [
    "markitdown-mcp==0.0.1a4"  # Latest available version of the MCP server
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # This is not a Python package, just managing dependencies

[tool.uv]
dev-dependencies = []